...
    
    func show(quiz result: QuizResultsViewModel) {
        guard let message = presenter?.makeResultsMessage() else { return }
        let model = AlertModel(title: result.title, message: message, buttonText: result.buttonText, completion: {
            self.presenter?.restartGame()
        },
                               id: "resultAlert"
        )
        alertPresenter?.presenterAlert(on: self, with: model)
    }
    
    @IBAction private func noButtonClicked(_ sender: UIButton) {
        presenter?.noButtonClicked()
...
